# snacks_crud_project

./: README.md  db.sqlite3  pyproject.toml
snacks/: admin.py  models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
snacks/static/css/: main.css
snacks_crud_project/: settings.py
templates/: _base.html  create_snack.html  delete_snack.html  index.html  snack_detail.html  update_snack.html
templates/parts/: navbar.html
